--- a/views/index.html
+++ b/views/index.html
@@ -8,66 +8,35 @@
   </head>
   <body>
     <header>
-    <h1>Jordy's FreeCodeCamp Personal Library</h1>
+    <h1>Jordy's FreeCodeCamp Personal Library <i class="fa fa-book"></i></h1>
     </header>
-    <!-- <br>
-    <div id="userstories">
-      <h2>User stories:</h2>
-      <ol>
-        <li>Nothing from my website will be cached in my client as a security measure.</li>
-        <li>I will see that the site is powered by 'PHP 4.2.0' even though it isn't as a security measure.</li>
-        <li>I can <b>post</b> a <code>title</code> to /api/books to add a book and returned will be the object with the <code>title</code> and a unique <code>_id</code>.</li>
-        <li>I can <b>get</b> /api/books to retrieve an aray of all books containing <code>title</code>, <code>_id</code>, & <code>commentcount</code>.</li>
-        <li>I can <b>get</b> /api/books/{_id} to retrieve a single object of a book containing <code>title</code>, <code>_id</code>, & an array of <code>comments</code> (empty array if no comments present).</li>
-        <li>I can <b>post</b> a <code>comment</code> to /api/books/{_id} to add a comment to a book and returned will be the books object similar to <b>get</b> /api/books/{_id}.</li>
-        <li>I can <b>delete</b> /api/books/{_id} to delete a book from the collection. Returned will be 'delete successful' if successful.</li>
-        <li>If I try to request a book that doesn't exist I will get a 'no book exists' message.</li>
-        <li>I can send a <b>delete</b> request to /api/books to delete all books in the database. Returned will be 'complete delete successful' if successful.</li>
-        <li>All 6 functional tests required are complete and passing.</li>
-      </ol>
-      <br>
-      <img src='https://cdn.gomix.com/d7932c52-287f-4dae-b175-631fef453000%2FScreen%20Shot%202016-12-16%20at%201.35.56%20AM.png' />
-    </div> -->
-    <!-- <hr style='margin: 50px'> -->
-    <!-- <div id ='sampleposting'>
-      <h2 style="text-align: left">Test API responses:</h2>
-      <form action="/api/books" method="post" class="border">
-        <h4>Test post to /api/books</h4>
-        Book Title:<br>
-        <input type="text" name="title" value=""><br>
-        <input type="submit" value="Submit">
-      </form>
-      <form action="" method="post" id="commentTest" class="border">
-        <h4>Test post to /api/books/{bookid}</h4>
-        BookId to comment on:<br>
-        <input type="text" name="id" value="" id="idinputtest"><br>
-        Comment:<br>
-        <input type="text" name="comment" value=""><br>
-        <input type="submit" value="Submit">
-      </form>
-    </div> -->
-    <!-- <hr style='margin: 50px'> -->
-    <div id='sampleui'>
-      <h2 style="text-align: left">Sample Front-End:</h2>
-      <div id="result"></div>
+    <div id='container'>
+      <div id="libraryDisplay">
+      <h2 id="libraryTitle"style="text-align: left">Personal-Library:</h2>
       <div id='display'></div> 
-      <form id="newBookForm" class="border">
-        <input type="text" id="bookTitleToAdd" name="title" placeholder="New Book Title" style="width: 295px">
-        <button type="submit" value="Submit" id="newBook">Submit New Book!</button>
-      </form>         
-      <div id='bookDetail' class='border'>
-        <p id='detailTitle'>Select a book to see it's details and comments or adding new comment or deleting the book itself</p>
-        <ol id='detailComments'></ol>
       </div>
-      <button id='deleteAllBooks'>Delete all books...</button>
+      <div id="UIcontainer">
+        <div id="formContainer">
+    
+        <form id="newBookForm" class="border">
+          <input type="text" id="bookTitleToAdd" name="title" placeholder="New Book Title" style="width: 295px">
+          <button type="submit" value="Submit" id="newBook">Submit New Book!</button>
+        </form>  
+        <button id='deleteAllBooks'>Delete all books...</button>
+        </div>
+
+        <div id='bookDetail' class='border'>
+          <p id='detailTitle'><b>Select a book to see it's details and comments or<br> adding new comment or deleting the book itself</b></p>
+          <ol id='detailComments'></ol>
+        </div>
+      </div>
     </div>
-    <!-- <hr style='margin: 50px'> -->
     <div id="footer">
       Created by <a href="https://www.freecodecamp.org/jordyf">Jordy Ferdian</a>  
       <button onclick="location.href='https://github.com/jordyf15'" class="fa fa-github fa-lg"></button>
       <button onclick="location.href='https://www.linkedin.com/in/jordy-ferdian-3606041a7'" class="fa fa-linkedin-square fa-lg"></button><br>
-      For FreeCodeCamp <a href="https://www.freecodecamp.org/learn/quality-assurance/quality-assurance-projects/issue-tracker">
-          Issue Tracker</a> project
+      For FreeCodeCamp <a href="https://www.freecodecamp.org/learn/quality-assurance/quality-assurance-projects/personal-library">
+          Personal Library</a> project
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.js" 
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" 
